# eplink-preproc

./: .gitignore  README.md  pyproject.toml
config/: config_preproc.yml  subjects_HSC.txt  subjects_LHS.txt  subjects_TWH.txt
resources/: dataset_description_derivatives_template.json
workflow/: Snakefile
workflow/rules/: preproc.smk  singularity.smk
