[tool.poetry]
name = "eplink-preproc"
version = "0.1.0"
description = "Snakemake workflow for running BIDS App pre-processing on EpLink data"
authors = ["akhanf <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
snakebids = "^0.3.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
